// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`arrow-function.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const x = () => [].includes(true) || "ontouchend" in document

const y = () => [] in x

=====================================output=====================================
const x = () => [].includes(true) || "ontouchend" in document;

const y = () => [] in x;

================================================================================
`;

exports[`arrow-function-invalid.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
() => [] in x

=====================================output=====================================
() => [] in x;

================================================================================
`;
